erDiagram
    %% ========================================================================
    %% voowork-desktop — SQLite local (offline-first)
    %% Domínio espelhado de voowork-backend/docs/db.mermaid + extensões locais
    %% ========================================================================

  device_metadata {
    text id PK
    text device_name
    text registered_at
    text created_at
    text updated_at
  }

  settings {
    text key PK
    text value
    text updated_at
  }

  sync_queue {
    text id PK
    text entity_type "tracking | tracking_screenshot | tracking_peripheral_event | tracking_app | tracking_site | tracking_inactivity_period"
    text entity_id
    text payload_json
    text status "pending | sending | confirmed | failed | dead"
    integer attempts
    text last_attempt_at
    text next_retry_at
    text error_message
    text created_at
    text confirmed_at
  }

  projects {
    text id PK
    text account_id
    text name
    integer featured
    text created_at
    text updated_at
  }

  tasks {
    text id PK
    text account_id
    text project_id FK
    text name
    text description
    integer position
    text created_at
    text updated_at
  }

  trackings {
    text id PK
    text account_id
    text project_id
    text task_id
    text user_id
    text status "active | inactive"
    text device
    text edition_reason
    text started_at
    text ended_at
    text created_at
    text updated_at
  }

  tracking_screenshots {
    text id PK
    text path
    text tracking_id FK
    text original_id
    text captured_at
    text period_started_at "local only"
    text time_category "local only: active | inactivity"
    integer is_duplicate "local only: 1 if hash matches previous screenshot"
    text activity_level "local only: low | medium | high"
    text remote_path "local only"
    text synced_at "local only"
    text created_at
    text updated_at
  }

  tracking_peripheral_events {
    text id PK
    text event "mouse_activity | keyboard_activity"
    real count
    text tracking_id FK
    text screenshot_original_id
    text started_at
    text ended_at
    text created_at
    text updated_at
  }

  tracking_apps {
    text id PK
    text name
    text tracking_id FK
    text started_at
    text ended_at
    text created_at
    text updated_at
  }

  tracking_sites {
    text id PK
    text address
    text tracking_id FK
    text started_at
    text ended_at
    text created_at
    text updated_at
  }

  tracking_inactivity_periods {
    text id PK
    text tracking_id FK
    text inactivity_started_at
    text paused_at
    text resumed_at
    integer duration_seconds
    integer discarded_seconds
    integer reclassified_seconds
    text category
    text status "paused | resumed | classified | discarded | abandoned"
    text created_at
    text updated_at
  }

  task_time_totals {
    text task_id PK
    integer active_seconds
    text updated_at
  }

  trackings ||--o{ tracking_screenshots : contains
  trackings ||--o{ tracking_peripheral_events : contains
  trackings ||--o{ tracking_apps : contains
  trackings ||--o{ tracking_sites : contains
  trackings ||--o{ tracking_inactivity_periods : contains
  projects ||--o{ tasks : contains
  projects ||--o{ trackings : has
